--- a/attributes.html
+++ b/attributes.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attributes Selectors</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <form action="">
-        <input type="password">
+      <input type="password" />
     </form>
   </body>
 </html>
