--- a/display.html
+++ b/display.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Display</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1 class="block-heading">Block Elements</h1>
@@ -16,3 +16,4 @@
     <a href="" class="inline">Link two</a>
   </body>
 </html>
+ 
